--- a/plugin.xml
+++ b/plugin.xml
@@ -18,27 +18,11 @@
         <framework src="build-extras.gradle" custom="true" type="gradleReference"/>
         <config-file target="config.xml" parent="/*">
             <feature name="MongoDBStorage">
-                <param name="android-package" value="com.mikakrooswijk.mongodb.plugin.
-                "/>
+                <param name="android-package" value="com.mikakrooswijk.mongodb.plugin.MongoDBStorage"/>
             </feature>
         </config-file>
 
-        <source-file src="src/android/com/mikakrooswijk/mongodb/plugin/MongoDBStorage.java" target-dir="src/com/creetion/gps/plugin" />
-        <source-file src="src/android/com/mikakrooswijk/mongodb/plugin/DatabaseControl.java" target-dir="src/com/creetion/gps/plugin" />
-
-        <!-- <source-file src="src/android/libs/arm64-v8a/libbson-1.0.so" target-dir="app/src/main/jniLibs/arm64-v8a"/>
-        <source-file src="src/android/libs/arm64-v8a/libmongo_embedded.so" target-dir="app/src/main/jniLibs/arm64-v8a"/>
-        <source-file src="src/android/libs/arm64-v8a/libmongo_embedded_capi.so" target-dir="app/src/main/jniLibs/arm64-v8a"/>
-        <source-file src="src/android/libs/arm64-v8a/libmongoc-1.0.so" target-dir="app/src/main/jniLibs/arm64-v8a"/>
-
-        <source-file src="src/android/libs/armeabi-v7a/libbson-1.0.so" target-dir="app/src/main/jniLibs/armeabi-v7a"/>
-        <source-file src="src/android/libs/armeabi-v7a/libmongo_embedded.so" target-dir="app/src/main/jniLibs/armeabi-v7a"/>
-        <source-file src="src/android/libs/armeabi-v7a/libmongo_embedded_capi.so" target-dir="app/src/main/jniLibs/armeabi-v7a"/>
-        <source-file src="src/android/libs/armeabi-v7a/libmongoc-1.0.so" target-dir="app/src/main/jniLibs/armeabi-v7a"/>
-
-        <source-file src="src/android/libs/x86_64/libbson-1.0.so" target-dir="app/src/main/jniLibs/x86_64"/>
-        <source-file src="src/android/libs/x86_64/libmongo_embedded.so" target-dir="app/src/main/jniLibs/x86_64"/>
-        <source-file src="src/android/libs/x86_64/libmongo_embedded_capi.so" target-dir="app/src/main/jniLibs/x86_64"/>
-        <source-file src="src/android/libs/x86_64/libmongoc-1.0.so" target-dir="app/src/main/jniLibs/x86_64"/> -->
-    </platform>
+        <source-file src="src/android/com/mikakrooswijk/mongodb/plugin/MongoDBStorage.java" target-dir="src/com/mikakrooswijk/mongodb/plugin" />
+        <source-file src="src/android/com/mikakrooswijk/mongodb/plugin/DatabaseControl.java" target-dir="src/com/mikakrooswijk/mongodb/plugin" />
+       </platform>
 </plugin>
