--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,7 @@
     </js-module> 
 
     <dependency id="cordova-plugin-cocoapod-support"/>
+    <dependency id="cordova-plugin-add-swift-support"/>
 
     <platform name="android">
         <framework src="build-extras.gradle" custom="true" type="gradleReference"/>
@@ -22,17 +23,13 @@
                 <param name="android-package" value="com.mikakrooswijk.mongodb.plugin.MongoDBStorage"/>
             </feature>
         </config-file>
-
         <source-file src="src/android/com/mikakrooswijk/mongodb/plugin/MongoDBStorage.java" target-dir="src/com/mikakrooswijk/mongodb/plugin" />
         <source-file src="src/android/com/mikakrooswijk/mongodb/plugin/DatabaseControl.java" target-dir="src/com/mikakrooswijk/mongodb/plugin" />
     </platform>
 
     <platform name="ios">
-
-
         <pods-config ios-min-version="11.0" use-frameworks="true">
         </pods-config>
-
         <pod name="StitchSDK" version="~> 5.0.0" />
         <pod name="StitchLocalMongoDBService" version="~> 5.0.0" />
 
