--- a/package.json
+++ b/package.json
@@ -82,5 +82,8 @@
     "rollup-plugin-node-resolve": "^4.2.3",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
