--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: nodejs
+language: node_js
 node_js:
-   - "7"
+  - "9"
 
 branches:
   only:
@@ -15,3 +15,4 @@ script:
 
 after_success:
 - npm pack
+
