--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,10 @@ script:
 after_success:
 - npm pack
 
+deploy: 
+  provider: npm 
+  email: mikakrooswijk@gmail.com 
+  api_key: $NPM_API_KEY
+  on: 
+    tags: true
+    branch: master
